cabal-version: >=1.10
name: paracletus
version: 0.0.4.0
license: BSD3
license-file: LICENSE
maintainer: vincecoghlan@gmail.com
author: Vince Coghlan
category: Game
build-type: Simple

flag dev
    default: True

executable paracletus
    main-is: Main.hs
    hs-source-dirs: src
    other-modules: UPrelude
                   Data
                   Luau
                   Prog
                   Sign
                   Vulk
                   Luau.Command
                   Luau.Data
                   Luau.Util
                   Prog.Data
                   Prog.Init
                   Prog.Util
                   Sign.Data
                   Sign.Except
                   Sign.Queue
                   Sign.Thread
                   Sign.Util
                   Sign.Var
                   Vulk.GLFW
    default-language: Haskell2010
    build-depends: base
                 , base-unicode-symbols
                 , filepath
                 , directory
                 , time
                 , split
                 , bytestring
                 , monad-logger
                 , exceptions
                 , fast-logger
                 , aeson
                 , mmorph
                 , transformers
                 , hslua
                 , stm
                 , mtl
                 , random
                 , process
                 , vector
                 , dimensions
                 , containers
                 , JuicyPixels
                 , vulkan-api >= 1.3
                 , easytensor
                 , easytensor-vulkan
                 , GLFW-b
                 , freetype2
                 , template-haskell
    default-extensions: DataKinds
                        ExplicitForAll
                        FlexibleInstances
                        LambdaCase
                        MagicHash
                        MultiWayIf
                        NamedFieldPuns
                        NegativeLiterals
                        RecordWildCards
                        TypeSynonymInstances
                        UnicodeSyntax
    other-extensions:   AllowAmbiguousTypes
                        BangPatterns
                        ConstraintKinds
                        CPP
                        DeriveGeneric
                        ExistentialQuantification
                        FlexibleContexts
                        GADTs
                        InstanceSigs
                        KindSignatures
                        LiberalTypeSynonyms
                        MonoLocalBinds
                        MultiParamTypeClasses
                        PatternSynonyms
                        PolyKinds
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        Strict
                        StrictData
                        TemplateHaskell
                        TypeApplications
                        TypeOperators
                        UnboxedTuples
                        UndecidableInstances
                        ViewPatterns
    if flag (dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -threaded -eventlog -rtsopts -fprof-auto -haddock -static
    else
        ghc-options: -O2 -optc-O3 -fexcess-precision -threaded -rtsopts -feager-blackholing -haddock
